Mejoras de codigo y documentacion